test/lit/pto/syncall_invalid_missing_ub.pto
// RUN: not ptoas %s 2>&1 | FileCheck %s

module {
  func.func @bad_syncall(%gm: memref<64xi32, #pto.address_space<gm>>) {
    pto.syncall(%gm : memref<64xi32, #pto.address_space<gm>>) mode = #pto.sync_all_mode<soft>, core_type = #pto.sync_core_type<aiv_only>
    return
  }
}

// CHECK: error: custom op 'pto.syncall' expects soft AIV-only syncall to have gm_workspace, ub_workspace, and optional used_cores
